package com.project.demo.model;

public enum Role {
    ADMIN,
    CUSTOMER,
    DESIGN_MANAGER,
    ORDER_MANAGER
}
